--- a/flexbox/flex-projeto/style.css
+++ b/flexbox/flex-projeto/style.css
@@ -22,6 +22,8 @@ div img {
   max-width: 992px;
   margin: auto;
   width: 100%;
+  min-width: 320px;
+  /*padding: 10px 15px;*/
 }
 
 header {
@@ -48,6 +50,7 @@ header .list-items {
 header .menu {
    justify-content: space-between;
 }
+
 .apresemtacao {
   height: 100vh;
   align-items: center;
@@ -55,7 +58,7 @@ header .menu {
 }
 
 .apresentacao .texto-apresentacao {
-  min-height: 200px;
+  min-height: 200px;  
 }
 
 .texto-apresentacao h1 {
@@ -166,18 +169,27 @@ header .menu {
 #planos {
   flex-direction: column;
   min-height: 100vh;
+  padding-top: 50px;
+}
+
+#planos h2 {
+  font-size: 32px;
+
 }
 
 .list-planos{
   display: flex;
   align-items: flex-end;
+  justify-content: space-between;
 }
 
 .item-plano {
   flex: 1;
-  border:  2px solid #122a57;
+  border:  5px solid #122a57;
   margin-right: 20px;
   padding: 10px;
+  max-width: 240px;
+  
 }
 
 .item-plano .btn {
@@ -190,6 +202,7 @@ header .menu {
   display: flex;
   flex-direction: column;
   text-align: center;
+  margin-top: 20px;
 
 }
 
@@ -206,6 +219,7 @@ header .menu {
   padding: 10px 20px;
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
 }
 
 .item-plano ul li {
@@ -221,4 +235,55 @@ header .menu {
   height: 10px;
   background-color: #122a57;
   margin-right: 5px;  
+}
+
+footer {
+  background-color: #122a57;
+  height: 70px;
+  display: flex;
+  align-items: center;
+}
+
+footer .footer {
+  justify-content: space-between;
+  color: #fff;
+}
+
+/*mobile*/
+@media(max-width: 992px) {
+  .flex-container{
+    flex-direction: column;
+  }
+
+  .apresemtacao {
+    flex-direction: column-reverse;
+  }
+  .apresemtacao .texto-apresentacao {
+    width: 100%;
+  }
+  #quem-somos{
+    flex-direction: column-reverse;
+  }
+  #quem-somos img{
+    min-width: 320px;
+    margin: auto;
+  }
+  .list-servicos {
+    flex-direction: column;
+  }
+  .item-servico img{
+    width: 50%;
+    margin: auto;
+  }
+  .list-planos {
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+  }
+  .list-planos .item-plano {
+    max-width: 90%;
+    margin: auto;
+    width: 100%;
+    margin-bottom: 20px;
+  }
 }
