--- a/dio-react/introducao-react/src/index.css
+++ b/dio-react/introducao-react/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: xx-large;
+  background-color: azure;
 }
 
 code {
@@ -14,5 +15,5 @@ code {
 }
 
 .teste {
-  color: blue;
+  color: black;
 }
